--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
+
 * {
-	font-family: "Ubuntu", sans-serif;
+	font-family: "Nunito", sans-serif;
 }
 
 #image {
@@ -120,7 +121,6 @@
 .skill {
 	display: flex;
 	flex-wrap: wrap;
-	
 	align-items: center;
 	margin: 0;
 }
@@ -143,24 +143,105 @@
 	margin: 0;
 }
 
-.div img {
-	width: 8%;
+.c img {
+	width: 7%;
+	margin-left: 0.5rem;
 }
 
-.div {
-	display: flex;
-	margin: 1rem;
-}
-
-.headDiv {
+.c {
 	display: flex;
 }
 
-.title h1 {
-	margin-left: 2rem;
+.a {
+	display: flex;
+	border: 0.15rem solid rgba(0,0,0,0.1);
 }
 
-.one img {
-	width: 20%;
+#date {
+	width: 10rem;
+	margin-right: 0.5rem;
+}
+
+#sec {
+	margin: 0;
+	margin-left: 1.5rem;
+	margin-bottom: 1rem;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+.header {
+	display: flex;
+	align-items: center; 
+}
+
+.header img {
+	width: 6rem;
 	border-radius: 50%;
+	margin: 0.5rem 0.5rem 0.5rem 2rem;
+}
+
+.title {
+	display: flex;
+	justify-content: space-between;
+	border: 0.15rem solid rgba(0,0,0,0.1);
+}
+
+.lang {
+	margin-right: 1rem;
+}
+
+.name-link {
+	text-decoration: none;
+	color: black;
 }
