--- a/styles.css
+++ b/styles.css
@@ -119,6 +119,7 @@
 
 .first h4 {
 	font-size: 1vw;
+	margin: 0.5rem;
 }
 
 .heading1 h1 {
@@ -182,58 +183,6 @@
 	flex-direction: row;
 }
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 .header {
 	display: flex;
 	align-items: center; 
@@ -269,7 +218,7 @@
 	padding: 0.5rem 0rem 0.5rem 0rem; 
 	display: flex;
 	width: 100%;
-	justify-content: space-between;
+	justify-content: space-around;
 }
 
 .circle-hobby {
