--- a/styles.css
+++ b/styles.css
@@ -119,7 +119,7 @@
 
 .first h4 {
 	font-size: 1vw;
-	margin: 0.5rem;
+	margin: 0.2rem;
 }
 
 .heading1 h1 {
@@ -141,6 +141,7 @@
 }
 
 .skillinner img {
+	border-radius: 1rem;
 	width: 16vw;
 	margin-top: 1rem;
 }
